doesn't chNGE IN DB

--- a/templates/events.html
+++ b/templates/events.html
@@ -7,19 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-<nav style="text-align: center"><a href="#">tomorrow</a> | <a href="#">today</a></nav>
+<nav style="text-align: center"><a href="#">tomorrow</a> | <a href="/">today</a></nav>
 {% for event in events %}
     <details>
     <summary>{{ event[0][:30] }},{{ event[1] }}@{{ event[2] }}</summary>
     <div>{{ event[3] }}</div>
 
     </details>
-    <div><a href="#">origin</a> <button class="btn btn-primary btn-lg">+1</button> <button class="btn btn-primary btn-lg"> -1</button>
+    <div><a href="https://www.facebook.com/events/{{ event[4] }}/" target="_blank">origin</a>
+        <button class="btn btn-primary btn-lg" onclick="down({{ event[4] }})">+1</button>
+        <button class="btn btn-primary btn-lg"> -1</button>
         <button>hide</button> <button>unrsvp</button>
     </div>
 {%  endfor %}
-<script src="/static/jquery.slim.min.js"></script>
+<script src="/static/jquery.min.js"></script>
 <script src="/static/bootstrap.min.js"></script>
+<script>
+    function down(id) {
+        //alert(id);
+        jQuery.get('/down1/'+id, function () {
+            
+        });
+    }
+
+</script>
 
 </body>
 </html>
