arrows in ui and native language

--- a/templates/events.html
+++ b/templates/events.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>events</title>
+    <title>Календарь</title>
     <link rel="stylesheet" href="/static/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
@@ -10,23 +10,27 @@
 <nav style="text-align: center"><a href="#">tomorrow</a> | <a href="/">today</a></nav>
 {% for event in events %}
     <details>
-    <summary>{{ event[0][:30] }},{{ event[1] }}@{{ event[2] }}</summary>
-    <div>{{ event[3] }}</div>
+        <summary>{{ event[0][:30] }},{{ event[1] }}@{{ event[2] }}</summary>
+        <div>{{ event[3] }}</div>
 
     </details>
     <div><a href="https://www.facebook.com/events/{{ event[4] }}/" target="_blank">origin</a>
-        <button class="btn btn-primary btn-lg" onclick="down({{ event[4] }})">+1</button>
-        <button class="btn btn-primary btn-lg"> -1</button>
-        <button>hide</button> <button>unrsvp</button>
+        <button title="get it up" class="btn btn-primary btn-lg">▲</button>
+        <button onclick="down1({{ event[4] }})" title="get it down" class="btn btn-primary btn-lg">▼</button>
+        <button>спрятать</button>
+        <button>отписатся</button>
     </div>
-{%  endfor %}
+{% endfor %}
 <script src="/static/jquery.min.js"></script>
 <script src="/static/bootstrap.min.js"></script>
 <script>
-    function down(id) {
-        //alert(id);
-        jQuery.get('/down1/'+id, function () {
-            
+    function down1(id) {
+        jQuery.get('/down1/' + id, function () {
+        });
+    }
+
+    function up1(id) {
+        jQuery.get('/up1/' + id, function () {
         });
     }
 
