up/down feature works

--- a/templates/events.html
+++ b/templates/events.html
@@ -15,7 +15,7 @@
 
     </details>
     <div><a href="https://www.facebook.com/events/{{ event[4] }}/" target="_blank">origin</a>
-        <button title="get it up" class="btn btn-primary btn-lg">▲</button>
+        <button onclick="up1({{ event[4] }})" title="get it up" class="btn btn-primary btn-lg">▲</button>
         <button onclick="down1({{ event[4] }})" title="get it down" class="btn btn-primary btn-lg">▼</button>
         <button>спрятать</button>
         <button>отписатся</button>
