hidden not working buttons

--- a/templates/events.html
+++ b/templates/events.html
@@ -17,8 +17,8 @@
     <div><a href="https://www.facebook.com/events/{{ event[4] }}/" target="_blank">origin</a>
         <button onclick="up1({{ event[4] }})" title="get it up" class="btn btn-primary btn-lg">▲</button>
         <button onclick="down1({{ event[4] }})" title="get it down" class="btn btn-primary btn-lg">▼</button>
-        <button>спрятать</button>
-        <button>отписатся</button>
+{#        <button disabled>спрятать</button>#}
+{#        <button disabled>отписатся</button>#}
     </div>
 {% endfor %}
 <script src="/static/jquery.min.js"></script>
