long events also are displayed

--- a/templates/events.html
+++ b/templates/events.html
@@ -14,7 +14,8 @@
         <div>{{ event[3] }}</div>
 
     </details>
-    <div><a href="https://www.facebook.com/events/{{ event[4] }}/" target="_blank">origin</a>
+    <div><a href="https://www.facebook.com/events/{{ event[4] }}/" target="_blank"
+            title="original event link will be opened in new tab">event in fb</a>
         <button onclick="up1({{ event[4] }})" title="get it up" class="btn btn-primary btn-lg">▲</button>
         <button onclick="down1({{ event[4] }})" title="get it down" class="btn btn-primary btn-lg">▼</button>
 {#        <button disabled>спрятать</button>#}
