--- a/templates/events.html
+++ b/templates/events.html
@@ -10,7 +10,7 @@
 <nav style="text-align: center"><a href="/{{ tomorrow }}">tomorrow</a> | <a href="/">today</a> | <a href="/pull/">check for new events</a></nav>
 {% for event in events %}
     <details>
-        <summary>{{ event[0][:30] }},{{ event[1] }}@{{ event[2] }}</summary>
+        <summary title="{{ event[3] }}" >{{ event[0][:50] }},{{ event[1] }}@{{ event[2] }}</summary>
         <div>{{ event[3] }}</div>
 
     </details>
