--- a/templates/events.html
+++ b/templates/events.html
@@ -11,7 +11,8 @@
     <a href="/all/1">surf all events</a></nav>
 {% for event in events %}
     <details>
-        <summary title="{{ event[3] }}" >{{ event[0][:50] }},{{ event[1] }}@{{ event[2] }}-{{ event[5] }}</summary>
+        <summary title="{{ event[3] }}" >{{ event[0][:75] }}<br>
+            {{ event[1] }},{{ event[9] }}@{{ event[2] }}-{{ event[5] }}</summary>
         <div>{{ event[3] }}</div>
 
     </details>
@@ -20,7 +21,7 @@
         <button onclick="down1({{ event[8] }})" title="get it down" class="btn btn-primary btn-lg">▼</button>
         <a href="https://www.google.com.ua/maps/search/{{ event[2] }}" target="_blank">show location on google map</a> |
         <a href="{{ event[4] }}" target="_blank"
-            title="original event link will be opened in new tab">{{ event[0][:15]  }}</a>
+            title="original event link will be opened in new tab">original link to {{ event[0][:15]  }}</a>
 
 {#        <button disabled>спрятать</button>#}
 {#        <button disabled>отписатся</button>#}
