--- a/templates/events.html
+++ b/templates/events.html
@@ -5,21 +5,27 @@
     <title>citify {{ today }} calendar</title>
     <link rel="stylesheet" href="/static/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <style>
+        body {
+            margin-left: 8px;
+            margin-top: 5px;
+        }
+    </style>
 </head>
 <body>
-<nav style="text-align: center"><a href="/{{ tomorrow }}">tomorrow</a> | <a href="/">today:{{ today }}</a> | <a href="/pull/">check for new events</a> |
+<nav style="text-align: center"><a href="/date/{{ tomorrow }}">tomorrow</a> | <a href="/">today:{{ today }}</a> | <a href="/pull/">check for new events</a> |
     <a href="/all/1">surf all events</a></nav>
 {% for event in events %}
     <details>
-        <summary title="{{ event[3] }}" >{{ event[0][:75] }}<br>
-            {{ event[1] }},{{ event[9] }}@{{ event[2] }}-{{ event[5] }}</summary>
+        <summary title="{{ event[3] }}" >{{ event[1] }},{{ event[0][:75] }},{{ event[9] }},{{ event[11] }} - {{ event[12] }} <br>
+            {{ event[10] }}@{{ event[2] }}-{{ event[5] }}</summary>
         <div>{{ event[3] }}</div>
 
     </details>
     <div>
         <button onclick="up1({{ event[8] }})" title="get it up" class="btn btn-primary btn-lg">▲</button>
         <button onclick="down1({{ event[8] }})" title="get it down" class="btn btn-primary btn-lg">▼</button>
-        <a href="https://www.google.com.ua/maps/search/{{ event[2] }}" target="_blank">show location on google map</a> |
+        <a href="https://www.google.com.ua/maps/search/{{ event[2] }}" target="_blank">show on map</a> |
         <a href="{{ event[4] }}" target="_blank"
             title="original event link will be opened in new tab">original link to {{ event[0][:15]  }}</a>
 
