--- a/templates/events.html
+++ b/templates/events.html
@@ -26,9 +26,9 @@
         <button onclick="up1({{ event[8] }})" title="get it up" class="btn btn-primary btn-lg">▲</button>
         <button onclick="down1({{ event[8] }})" title="get it down" class="btn btn-primary btn-lg">▼</button>
 
-        <a href="https://www.google.com.ua/maps/search/{{ event[2] }}" target="_blank">show on map</a> |
+        <a href="https://www.google.com.ua/maps/search/{{ event[2] }}" target="_blank">on map</a> |
         <a href="{{ event[4] }}" target="_blank"
-            title="original event link will be opened in new tab"> link to {{ event[0][:10]  }}</a>
+            title="original event link will be opened in new tab"> link to {{ event[0][:5]  }}</a>
 {#        <button class="btn btn-danger btn-sm" style="float: right;">hide</button>#}
 
 {#        <button disabled>отписатся</button>#}
