--- a/templates/events.html
+++ b/templates/events.html
@@ -13,11 +13,12 @@
     </style>
 </head>
 <body>
-<nav style="text-align: center"><a href="/date/{{ tomorrow }}">tomorrow</a> | <a href="/">today:{{ today }}</a> | <a href="/pull/">update</a> |
+<nav style="text-align: center"><a href="/date/{{ tomorrow }}">tomorrow</a> | <a href="/">today:{{ today }}</a> | <a
+        href="/pull/">update</a> |
     <a href="/all/1">surf all</a></nav>
 {% for event in events %}
     <details>
-        <summary title="{{ event[3] }}" >{{ event[1] }},{{ event[0][:40] }},{{ event[9] }},
+        <summary title="{{ event[3] }}">{{ event[1] }},{{ event[0][:40] }},{{ event[9] }},
             {{ event[10] }}@{{ event[2] }}-{{ event[5] }}</summary>
         <div>{{ event[3] }}</div>
 
@@ -28,10 +29,10 @@
 
         <a href="https://www.google.com.ua/maps/search/{{ event[2] }}" target="_blank">on map</a> |
         <a href="{{ event[4] }}" target="_blank"
-            title="original event link will be opened in new tab"> link to {{ event[0][:5]  }}</a>
-{#        <button class="btn btn-danger btn-sm" style="float: right;">hide</button>#}
+           title="original event link will be opened in new tab"> link to {{ event[0][:5] }}</a>
+        {#        <button class="btn btn-danger btn-sm" style="float: right;">hide</button>#}
 
-{#        <button disabled>отписатся</button>#}
+        {#        <button disabled>отписатся</button>#}
     </div>
 {% endfor %}
 <script src="/static/jquery.min.js"></script>
